Copy localization configs from Type project for propper testing

--- a/Assets/Resources/Localization/Locales/en.json
+++ b/Assets/Resources/Localization/Locales/en.json
@@ -1,137 +1,134 @@
-{"key":"privacy_policy_url","value":"https://10000riders.com/privacy-policy/"};
-{"key":"terms_of_use_url","value":"https://10000riders.com/terms-of-service/"};
-{"key":"activity_0_sell_beer_name","value":"Sell classic beer"};
-{"key":"activity_1_new_beer_name","value":"Play music"};
-{"key":"activity_2_sell_beer_name","value":"Sell cheap alcohol"};
-{"key":"activity_3_new_beer_name","value":"Make a fight"};
-{"key":"activity_4_sell_beer_name","value":"New cheap alcohol brought in"};
-{"key":"activity_5_new_beer_name","value":"We organize a laser show"};
-{"key":"activity_6_sell_beer_name","value":"New beer brought i"};
-{"key":"activity_7_new_beer_name","value":"Kick out drunks"};
-{"key":"activity_8_sell_beer_name","value":"Sell improved beer"};
-{"key":"activity_9_new_beer_name","value":"Throwing a foam party"};
-{"key":"structure_bar_1_name","value":"Bar"};
-{"key":"structure_hostel_1_name","value":"Hostel"};
-{"key":"structure_gunshop_1_name","value":"Gun shop"};
-{"key":"skill_1_skull_crash_name","value":"Skull Crash"};
-{"key":"skill_2_fast_shoot_name","value":"Fast Shoot"};
-{"key":"skill_1_skull_crash_desc","value":"Desc 1"};
-{"key":"skill_2_fast_shoot_desc","value":"Desc 2"};
-{"key":"skill_saving_grace_name","value":"Saving Grace"};
-{"key":"skill_saving_grace_desc","value":"Desc 3"};
-{"key":"activity_hotel_0_suggest_girls_name","value":"Order girls"};
-{"key":"activity_hotel_1_suggest_luxurious_rooms_name","value":"Room cleaning"};
-{"key":"activity_hotel_2_suggest_girls_in_a_bunny_costume_name","value":"Order luxurious rooms"};
-{"key":"activity_hotel_3_suggest_torture_name","value":"Suggest dinner"};
-{"key":"activity_hotel_4_room_cleaning_name","value":"Turning on hot water"};
-{"key":"activity_hotel_5_turning_on_hot_water_name","value":"Suggest roast duck"};
-{"key":"activity_hotel_6_suggest_alcohol_name","value":"Order taxi"};
-{"key":"activity_hotel_7_suggest_taxi_name","value":"Go down to the basement"};
-{"key":"activity_hotel_8_suggest_sauna_name","value":"Make a buffet"};
-{"key":"activity_hotel_9_suggest_dinner_name","value":"Order sauna"};
-{"key":"activity_hotel_10_suggest_red_capsules_name","value":"Fix the roof"};
-{"key":"activity_hotel_11_suggest_washing_clothes_name","value":"Get us sushi"};
-{"key":"activity_hotel_12_suggest_smoking_room_name","value":"Order headache pill"};
-{"key":"activity_hotel_13_have_a_party_name","value":"Make a pizza"};
-{"key":"activity_hotel_14_suggest_headache_pill_name","value":"Vacuum the floor"};
-{"key":"activity_10_new_beer_name","value":"To call the police"};
-{"key":"activity_11_new_beer_name","value":"Putting money in the dancers' panties"};
-{"key":"activity_12_new_beer_name","value":"Wreak chaos"};
-{"key":"activity_13_new_beer_name","value":"Clean up in the hall"};
-{"key":"activity_14_new_beer_name","value":"Kick out the last guests"};
-{"key":"activity_gunshop_0_check_warehouse_name","value":"Check the warehouse"};
-{"key":"activity_gunshop_1_weapon_cleaning_name","value":"Get the AK-47"};
-{"key":"activity_gunshop_2_sell_pistols_name","value":"Sell grenade"};
-{"key":"activity_gunshop_3_sell_grenade_name","value":"Look through the scope"};
-{"key":"activity_gunshop_4_clean_ak47_name","value":"Clean the AK-47"};
-{"key":"activity_gunshop_5_supply_army_name","value":"Testing weapons on a robot"};
-{"key":"activity_gunshop_6_look_name","value":"Prepare gunpowder"};
-{"key":"activity_gunshop_7_prepare_traps_name","value":"Prepare traps"};
-{"key":"activity_gunshop_8_sell_shotguns_name","value":"Time to empty the clip"};
-{"key":"activity_gunshop_9_testing_name","value":"Shooting competitors"};
-{"key":"activity_gunshop_10_upgrade_name","value":"Throw grenades"};
-{"key":"activity_gunshop_11_sell_rpg_name","value":"Reload weapon"};
-{"key":"activity_gunshop_12_craft_ammo_name","value":"Prepare flashbang"};
-{"key":"activity_gunshop_13_sharpen_knives_name","value":"Soldier training in shooting"};
-{"key":"activity_gunshop_14_make_rockets_name","value":"Distribute weapons to soldiers"};
-{"key":"idler_idler_rank_1_name","value":"District \"Slums\""};
-{"key":"idler_idler_rank_2_name","value":"District \"Slums borders\""};
-{"key":"idler_idler_rank_3_name","value":"District \"Warehouses\""};
-{"key":"idler_idler_rank_4_name","value":"District \"Polis\""};
-{"key":"idler_idler_rank_5_name","value":"District \"Outlines\""};
-{"key":"activity_mall_0_meat_smug_name","value":"Meat smuggling"};
-{"key":"activity_mall_1_sell_meat_name","value":"Sell illegal meat"};
-{"key":"activity_mall_2_bribe_police_name","value":"Bribe the police"};
-{"key":"activity_mall_3_parts_smug_name","value":"Spare parts smuggling"};
-{"key":"activity_mall_4_sell_hemp_name","value":"Sell hemp"};
-{"key":"activity_mall_5_local_merchants_name","value":"Bribe local merchants"};
-{"key":"activity_mall_6_alcohol_smug_name","value":"Alcohol smuggling"};
-{"key":"activity_mall_7_sell_ivory_name","value":"Sell ivory"};
-{"key":"activity_mall_8_bribe_drivers_name","value":"Bribe to drivers"};
-{"key":"activity_mall_9_robot_smug_name","value":"Robot smuggling"};
-{"key":"activity_mall_10_sell_jewelry_name","value":"Sell illegal jewelry"};
-{"key":"activity_mall_11_bribe_government_name","value":"Bride the government"};
-{"key":"activity_mall_12_weapon_smug_name","value":"Weapon smuggling"};
-{"key":"activity_mall_13_sell_antiques_name","value":"Sell illegal antiques"};
-{"key":"activity_mall_14_bribe_director_name","value":"Bribe to the market director"};
-{"key":"Hero_1_Jay_name","value":"Jay"};
-{"key":"Hero_1_Jay_desc","value":""};
-{"key":"Hero_2_Trixie_name","value":"Trixie"};
-{"key":"Hero_2_Trixie_desc","value":""};
-{"key":"Hero_3_Miomi_name","value":"Miomi"};
-{"key":"Hero_3_Miomi_desc","value":""};
-{"key":"Hero_4_Katana_name","value":"Katana"};
-{"key":"Hero_4_Katana_desc","value":""};
-{"key":"Hero_5_Drona_name","value":"Drona"};
-{"key":"Hero_5_Drona_desc","value":""};
-{"key":"Hero_6_UkiAndKrusaber_name","value":"Uki & Krusaber"};
-{"key":"Hero_6_UkiAndKrusaber_desc","value":""};
-{"key":"Hero_7_AikoAndKasumi_name","value":"Aiko & Kasumi"};
-{"key":"Hero_7_AikoAndKasumi_desc","value":""};
-{"key":"Hero_8_Rozaline_name","value":"Rozaline"};
-{"key":"Hero_8_Rozaline_desc","value":""};
-{"key":"Hero_9_Louise_name","value":"Louise"};
-{"key":"Hero_9_Louise_desc","value":""};
-{"key":"Hero_10_Frieza_name","value":"Frieza"};
-{"key":"Hero_10_Frieza_desc","value":""};
-{"key":"Hero_11_Harley_name","value":"Harley"};
-{"key":"Hero_11_Harley_desc","value":""};
-{"key":"Hero_12_Akane_name","value":"Akane"};
-{"key":"Hero_12_Akane_desc","value":""};
-{"key":"Hero_13_Izumi_name","value":"Izumi"};
-{"key":"Hero_13_Izumi_desc","value":""};
-{"key":"Hero_14_Tetsuo_name","value":"Molly"};
-{"key":"Hero_14_Tetsuo_desc","value":""};
-{"key":"Hero_15_LiloAndBear_name","value":"Lilo and Teddy"};
-{"key":"Hero_15_LiloAndBear_desc","value":""};
-{"key":"race_cyborg","value":"Cyborg"};
-{"key":"race_human","value":"Human"};
-{"key":"race_mutant","value":"Mutant"};
-{"key":"rarity_rare","value":"Rare"};
-{"key":"rarity_epic","value":"Epic"};
-{"key":"rarity_legendary","value":"Legendary"};
-{"key":"activity_tattoo_0_making_temporary_name","value":"Making a temporary tattoo"};
-{"key":"activity_tattoo_1_piercing_ear_name","value":"Piercing the ear"};
-{"key":"activity_tattoo_2_putting_chip_name","value":"Putting the chip into the brain"};
-{"key":"activity_tattoo_3_making_skull_name","value":"Making a tattoo on the skull"};
-{"key":"activity_tattoo_4_piercing_lip_name","value":"Piercing the lip"};
-{"key":"activity_tattoo_5_insert_iron_name","value":"We insert an iron hand"};
-{"key":"activity_tattoo_6_removing_tattoo_name","value":"Removing the tattoo"};
-{"key":"activity_tattoo_7_piercing_nose_name","value":"Piercing the nose"};
-{"key":"activity_tattoo_8_assault_rifle_name","value":"Implanting an assault rifle into the arm"};
-{"key":"activity_tattoo_9_change_skin_name","value":"Change skin color"};
-{"key":"activity_tattoo_10_body_piercing_name","value":"Intimate body piercing"};
-{"key":"activity_tattoo_11_skin_metal_name","value":"Change the skin to metal"};
-{"key":"activity_tattoo_12_scarification_name","value":"Scarification"};
-{"key":"activity_tattoo_13_surgical_intervention_name","value":"Surgical intervention"};
-{"key":"activity_tattoo_14_implanting_face_name","value":"Implanting a new face"};
-{"key":"structure_market_1_name","value":"Market"};
-{"key":"structure_tattoo_1_name","value":"Tattoo"};
-{"key":"skill_1_fast_shoot_name","value":"Fast Shoot"};
-{"key":"skill_1_fast_shoot_desc","value":"Fast Shoot desc"};
-{"key":"Faked_Hero_11_Harley_faked_noskills_name","value":"Harley"};
-{"key":"Faked_Hero_11_Harley_faked_noskills_desc","value":""};
-{"key":"Enemy_1_DarkSoldierBase_name","value":"Corporation Warrior"};
-{"key":"Enemy_1_DarkSoldierBase_desc","value":""};
-{"key":"Enemy_2_DarkSoldierImproved_name","value":"Corporation Scout"};
-{"key":"Enemy_2_DarkSoldierImproved_desc","value":""}
+{"key":"hut_building_name","value":"Housing"};
+{"key":"garden_building_name","value":"Garden"};
+{"key":"cave_building_name","value":"Cave"};
+{"key":"fishing_building_name","value":"Fish Place"};
+{"key":"farm_building_name","value":"Animal Farm"};
+{"key":"stones_building_name","value":"Magic Stones"};
+{"key":"idol_building_name","value":"Idol"};
+{"key":"loading_default_state","value":"Loading..."};
+{"key":"loading_finish_state","value":"Done"};
+{"key":"loading_failed_state","value":"Error"};
+{"key":"loading_services_state","value":"Services initialization..."};
+{"key":"loading_sync_state","value":"Synchronizing..."};
+{"key":"loading_login_state","value":"Logining..."};
+{"key":"tips_1","value":"Look for unusual events"};
+{"key":"tips_2","value":"Complete Match 3 levels to improve buildings"};
+{"key":"loading_preload_scenes_state","value":"Scene loading..."};
+{"key":"upgrade_type_profit","value":""};
+{"key":"upgrade_type_timer","value":""};
+{"key":"require_level","value":""};
+{"key":"examine_for_energy","value":""};
+{"key":"building_menu_levelup_label","value":"Next profit level:"};
+{"key":"maingame_bonus_bonfire_force","value":""};
+{"key":"maingame_bonus_time_wrap","value":""};
+{"key":"maingame_bonus_building_force","value":""};
+{"key":"match3_you_win","value":"Matched!"};
+{"key":"match3_you_lose","value":"<color=\"#FFBC28\">Didn't Match!</color>"};
+{"key":"portal_text_placement","value":""};
+{"key":"portal_gives_bonus_text","value":""};
+{"key":"portal_window_increase_bonus_2x","value":""};
+{"key":"portal_window_default_bonus","value":""};
+{"key":"training_dialogues_first_tittle","value":"Energy Evolution"};
+{"key":"training_dialogues_first_message","value":"Hi, I'm Curly Henry, the brave leader\na small tribe of the first people.\n\nOur world has just begun, everything is here\ndepends on Energy, it is the main resource\nfor the development of our civilization.\n\nWe have to go through a difficult, but very\ninteresting way! I have to learn\nget maximum energy, let's start with fire!"};
+{"key":"training_dialogues_first_confirm","value":"Make a Fire!"};
+{"key":"building_menu_versionup","value":""};
+{"key":"training_dialogues_build_tittle","value":"First Building"};
+{"key":"training_dialogues_build_message","value":"Curly Henry is great at getting fire energy!\nMoving on!\n\nNow it's time to found a settlement,\nfirst you need to build a Housing!\n\nEach building will bring our settlement.\nWe need to constantly improve\nand improve them!"};
+{"key":"training_dialogues_build_confirm","value":"Let's build it!"};
+{"key":"training_dialogues_portal_tittle","value":"Mysterious Portals"};
+{"key":"training_dialogues_portal_message","value":"Henry noticed how suddenly in the sky\na mysterious portal has opened!\n\nWith lightning bolts he brings us an\nadditional  power of energy production!\n\nSomeone helps us on the path of energy\nevolution, now you need to be careful look up\nto the sky so as not to miss the emergence\nof new portals!"};
+{"key":"training_dialogues_portal_confirm","value":"Pick Up Bonus!"};
+{"key":"training_dialogues_easteregg_tittle","value":"Unusual Extra Events"};
+{"key":"training_dialogues_easteregg_message","value":"Sometimes something unique happens in the world.\nBy witnessing such events, you can get hold\nof an Easter egg.\n\nLegends say that every such egg keeps in itself\na huge energy force, one day it will be\nvery useful to us!\n\nNow we will look for Easter eggs and\ncollect them into a unique collection!"};
+{"key":"training_dialogues_easteregg_confirm","value":"To collect"};
+{"key":"training_dialogues_upgrade_tittle","value":"Improvement of Buildings"};
+{"key":"training_dialogues_upgrade_message","value":"Curly Henry is the wise leader of his people!\n\nI constantly think about how to get more energy.\nEach of our buildings can work much\nbetter and faster!\n\nWe need to break our heads a little examining\nMatch3 for improvements profit and speed\nof our buildings!"};
+{"key":"training_dialogues_upgrade_confirm","value":"Start Explore"};
+{"key":"language_name","value":"English"};
+{"key":"options_help_suggest","value":"You can help developers by watching adv video :)"};
+{"key":"options_privacy_policy","value":"privacy policy"};
+{"key":"options_user_agreement","value":"terms of use"};
+{"key":"options_label","value":"Settings"};
+{"key":"options_music","value":"Music"};
+{"key":"options_sounds","value":"Sounds"};
+{"key":"options_select_language","value":"Select language"};
+{"key":"options_sync","value":"Synchronization"};
+{"key":"options_mail","value":"Contact us"};
+{"key":"options_save_reset","value":"Save full reset"};
+{"key":"privacy_policy_url","value":"https://krugames.ru/privacypolicy"};
+{"key":"terms_of_use_url","value":"https://krugames.ru/termsofuse"};
+{"key":"save_erase_confirm_tittle","value":"Confirm action"};
+{"key":"save_erase_confirm_message","value":"Make sure you really want to erase your data! Data will never be recovered after erasing"};
+{"key":"save_erase_confirm_yes","value":"Yes"};
+{"key":"save_erase_confirm_no","value":"No"};
+{"key":"loading_play_button","value":"Play"};
+{"key":"loading_facebook_button","value":"Facebook login"};
+{"key":"mail_dialog_send_button","value":"Send"};
+{"key":"mail_dialog_cancel_button","value":"Cancel"};
+{"key":"mail_dialog_email_placeholder","value":"Enter your email..."};
+{"key":"mail_dialog_message_placeholder","value":"Enter your message..."};
+{"key":"match3_result_earned_label","value":"Earned:"};
+{"key":"building_upgrades_label","value":"Exploring improvements"};
+{"key":"building_upgrade_name_profit_multiplier","value":"Multi Profit"};
+{"key":"building_upgrade_name_timer_reducer","value":"Multi Timer"};
+{"key":"match3_view_adv_play","value":"Play"};
+{"key":"match3_win_play_again","value":"Explore more"};
+{"key":"match3_lose_play_again","value":"Play again"};
+{"key":"match3_win_get_term","value":"Activate"};
+{"key":"match3_play_for_adv_term","value":"Play once more"};
+{"key":"push_notification_title","value":"Fire goes out!"};
+{"key":"push_notification_message","value":"I really need your help :)"};
+{"key":"training_dialogues_buildinghelp_tittle","value":"The Main Mission"};
+{"key":"training_dialogues_buildinghelp_message","value":"Curly Henry must achieve energetic prosperity\nfor his people!\n\nTo do this, we need to develop as much as possible\nBuildings - solve all puzzles and\ncomplete all upgrades.\n\nIt will take a lot of time and effort,\nbut will allow us to move on to the next era of\nenergy development of civilization!"};
+{"key":"training_dialogues_buildinghelp_confirm","value":"Okay, got it!"};
+{"key":"training_dialogues_missioncomplete_tittle","value":"Age Mission Done!"};
+{"key":"training_dialogues_missioncomplete_message","value":"We have achieved energy wealth!\nNow my people have enough energy for\neverything and we can live without\nworries and hassles!\n\nWe have come a very long and difficult way!\nLegends about the wise Henry will now be\npassed on by descendants from generation\nto generation, through the ages!\nTherefore, you will remember me more than once!"};
+{"key":"training_dialogues_missioncomplete_confirm","value":"That's Great!"};
+{"key":"get_term","value":"Pick up"};
+{"key":"cooming_soon","value":"Age II cooming soon..."};
+{"key":"will_wait","value":"Great!"};
+{"key":"activate_term","value":"Activate"};
+{"key":"bonus_time_wrap_name","value":"Time Wrap"};
+{"key":"bonus_time_wrap_description","value":"get energy accumulated for a few minutes"};
+{"key":"bonus_power_profit_name","value":"Power Profit"};
+{"key":"bonus_power_profit_description","value":"all buildings will be bring more energy for 1 minute"};
+{"key":"bonus_strong_fire_name","value":"Strong Fire"};
+{"key":"bonus_strong_fire_description","value":"fire will bring more energy for 2 minutes"};
+{"key":"bonus_super_profit_name","value":"Super Profit"};
+{"key":"bonus_super_profit_description","value":"5 portals collected in a row turn on all objects for 30 seconds"};
+{"key":"tips_3","value":"Pushing over the fire helps to increase energy reserves"};
+{"key":"tips_4","value":"Portals bring powerful energy help"};
+{"key":"tips_5","value":"Match 3 combos give more points"};
+{"key":"match3_exit_caption","value":"Settlement"};
+{"key":"loading_match3_caption","value":"loading the puzzle..."};
+{"key":"loading_maingame_caption","value":"Back to the settlement..."};
+{"key":"progress_improvements_caption","value":"progress improvements"};
+{"key":"add_5_more_moves","value":"Add 5 more moves?"};
+{"key":"welcome_back_tittle","value":"Welcome Back!"};
+{"key":"welcome_back_message","value":"while you were away, some energy was collected:"};
+{"key":"easter_egg_collection","value":"Easter egg collection"};
+{"key":"add_5_more_moves_button","value":"Let's do it!"};
+{"key":"agreement_yes","value":"I agree"};
+{"key":"agreement_no","value":"I disagree"};
+{"key":"agreement_text","value":"Examine terms of use and privacy policy. You should agree with these documents to continue"};
+{"key":"loading_check_updates_state","value":"Checking for updates..."};
+{"key":"update_help_label","value":"Update help"};
+{"key":"update_download_button","value":"Download"};
+{"key":"update_title","value":"We have prepared new updates!"};
+{"key":"update_text","value":"To continue playing Type,\nplease update the game \nto the new version. \nThank you !"};
+{"key":"update_help_url","value":"https://krugames.ru"};
+{"key":"statistic_window_current_energy_prefix","value":"avaliable energy: "};
+{"key":"statistic_window_energy_profit_prefix","value":"energy profit: "};
+{"key":"statistic_window_energy_profit_persecond","value":" per second"};
+{"key":"statistic_window_total_energy","value":"overall energy: "};
+{"key":"statistic_window_era_name","value":"primitive era"};
+{"key":"statistic_window_progress","value":"progress"};
+{"key":"statistic_window_upgrades","value":"upgrades"};
+{"key":"statistic_window_buildings","value":"buildings"};
+{"key":"statistic_window_fire_taps","value":"fire taps"};
+{"key":"statistic_window_portals","value":"portals"};
+{"key":"rateus_title","value":"Like the game?"};
+{"key":"rateus_message","value":"Give us 5 stars!"};
+{"key":"rateus_rate_button","value":"Rate"};
+{"key":"rateus_later_button","value":"Later"};
+{"key":"upgrades_unlock_hint","value":"Examine blueprints to improve your building"}
