--- a/Assets/Resources/Localization/Locales/ru.json
+++ b/Assets/Resources/Localization/Locales/ru.json
@@ -1,15 +1,134 @@
-{"key":"activity_0_sell_beer_name","value":"Продаём пивасик"};
-{"key":"activity_1_new_beer_name","value":"Завезли новое пивко"};
-{"key":"activity_2_sell_beer_name","value":"Продаём улучшенный пивас"};
-{"key":"activity_3_new_beer_name","value":"Завезли новое улучшенное пивко"};
-{"key":"activity_4_sell_beer_name","value":"Продаём редкое пивко"};
-{"key":"activity_5_new_beer_name","value":"Завозим новое редкое пивко"};
-{"key":"activity_6_sell_beer_name","value":"Эпическое пивко в продаже"};
-{"key":"activity_7_new_beer_name","value":"Ещё больше эпического пивка"};
-{"key":"activity_8_sell_beer_name","value":"Легендарное пивко в кружках"};
-{"key":"activity_9_new_beer_name","value":"Увеличиваем размер легендарных кружек"};
-{"key":"structure_bar_1_name","value":"Бар"};
-{"key":"structure_hostel_1_name","value":"Хостел"};
-{"key":"structure_weapon_warehouse_1_name","value":"Склад оружия"};
-{"key":"skill_1_skull_crash_name","value":""};
-{"key":"skill_2_fast_shoot_name","value":""}
+{"key":"hut_building_name","value":"Жилище"};
+{"key":"garden_building_name","value":"Огород"};
+{"key":"cave_building_name","value":"Пещера"};
+{"key":"fishing_building_name","value":"Рыбное место"};
+{"key":"farm_building_name","value":"Скотный двор"};
+{"key":"stones_building_name","value":"Магические камни"};
+{"key":"idol_building_name","value":"Идол"};
+{"key":"loading_default_state","value":"Загрузка..."};
+{"key":"loading_finish_state","value":"Завершено"};
+{"key":"loading_failed_state","value":"Ошибка"};
+{"key":"loading_services_state","value":"Инициализация сервисов..."};
+{"key":"loading_sync_state","value":"Синхронизация..."};
+{"key":"loading_login_state","value":"Вход..."};
+{"key":"tips_1","value":"Ищите редкие события"};
+{"key":"tips_2","value":"Проходите уровни Match 3 чтобы улучшить постройки"};
+{"key":"loading_preload_scenes_state","value":"Загрузка сцен..."};
+{"key":"upgrade_type_profit","value":""};
+{"key":"upgrade_type_timer","value":""};
+{"key":"require_level","value":""};
+{"key":"examine_for_energy","value":""};
+{"key":"building_menu_levelup_label","value":"Следующий уровень:"};
+{"key":"maingame_bonus_bonfire_force","value":""};
+{"key":"maingame_bonus_time_wrap","value":""};
+{"key":"maingame_bonus_building_force","value":""};
+{"key":"match3_you_win","value":"Всё сложилось!"};
+{"key":"match3_you_lose","value":"<color=\"#FFBC28\">Не сложилось!</color>"};
+{"key":"portal_text_placement","value":""};
+{"key":"portal_gives_bonus_text","value":""};
+{"key":"portal_window_increase_bonus_2x","value":""};
+{"key":"portal_window_default_bonus","value":""};
+{"key":"training_dialogues_first_tittle","value":"Энергетическая эволюция"};
+{"key":"training_dialogues_first_message","value":"Привет, я Кудрявый Генри, отважный лидер\nнебольшого племени первых людей.\n\nНаш мир только что зародился, здесь всё\nзависит от Энергии, это основной ресурс\nдля развития нашей цивилизации.\n\nНам предстоит пройти сложный, но очень\nинтересный путь! Я должен научиться\nдобывать максимум энергии, начнём с огня..."};
+{"key":"training_dialogues_first_confirm","value":"Зажечь!"};
+{"key":"building_menu_versionup","value":""};
+{"key":"training_dialogues_build_tittle","value":"Первая постройка"};
+{"key":"training_dialogues_build_message","value":"Кудрявый Генри отлично научился добывать\nэнергию огня! Двигаемся дальше!\n\nТеперь  пришло время основать поселение,\nдля начала нужно построить Жилище!\n\nКаждая постройка будет приносить\nэнергию нашему поселению.\nНужно постоянно развивать и улучшать их!"};
+{"key":"training_dialogues_build_confirm","value":"Построить"};
+{"key":"training_dialogues_portal_tittle","value":"Таинственные порталы"};
+{"key":"training_dialogues_portal_message","value":"Генри заметил, как в небе внезапно\nоткрылся энергетический портал!\n\nС разрядами молний он приносит\nнам дополнительную силу добычи энергии!\n\nКто-то помогает нам на пути энергетической\nэволюции, теперь нужно внимательнее\nсмотреть в небо, чтобы не пропустить\nпоявления новых порталов"};
+{"key":"training_dialogues_portal_confirm","value":"Получить бонус"};
+{"key":"training_dialogues_easteregg_tittle","value":"Уникальное событие"};
+{"key":"training_dialogues_easteregg_message","value":"Иногда в мире происходит что-то уникальное.\nСтав свидетелем таких событий, можно заполучить\nпасхальное яйцо.\n\nЛегенды говорят, что каждое такое яйцо\nхранит в себе огромную энергетическую силу,\nоднажды нам это очень пригодится!\n\nТеперь будем искать пасхальные яйца и\nсобирать их в уникальную коллекцию!"};
+{"key":"training_dialogues_easteregg_confirm","value":"В коллекцию"};
+{"key":"training_dialogues_upgrade_tittle","value":"Улучшение построек"};
+{"key":"training_dialogues_upgrade_message","value":"Кудрявый Генри - мудрый лидер своего народа!\n\nЯ постоянно думаю, как добывать больше\nэнергии. Каждая наша постройка может\nработать гораздо лучше и быстрее!\n\nНам нужно немного поломать голову,\nизучая чертежи match3 для улучшений\nпрофита и скорости наших построек."};
+{"key":"training_dialogues_upgrade_confirm","value":"Изучать"};
+{"key":"language_name","value":"Русский"};
+{"key":"options_help_suggest","value":"Вы можете помочь нашей команде просто посмотрев рекламный ролик :)"};
+{"key":"options_privacy_policy","value":"политика конфиденциальности"};
+{"key":"options_user_agreement","value":"правила использования"};
+{"key":"options_label","value":"Настройки"};
+{"key":"options_music","value":"Музыка"};
+{"key":"options_sounds","value":"Звуки"};
+{"key":"options_select_language","value":"Выбрать язык"};
+{"key":"options_sync","value":"Синхронизация"};
+{"key":"options_mail","value":"Напишите нам"};
+{"key":"options_save_reset","value":"Полный сброс игры"};
+{"key":"privacy_policy_url","value":"https://krugames.ru/privacypolicy"};
+{"key":"terms_of_use_url","value":"https://krugames.ru/termsofuse"};
+{"key":"save_erase_confirm_tittle","value":"Подтвердите действие"};
+{"key":"save_erase_confirm_message","value":"Вы действительно хотите удалить весь сохраненный прогресс? Данные невозможно будет восстановить"};
+{"key":"save_erase_confirm_yes","value":"Да, хочу!"};
+{"key":"save_erase_confirm_no","value":"Нет, спасибо"};
+{"key":"loading_play_button","value":"Играть"};
+{"key":"loading_facebook_button","value":"Facebook вход"};
+{"key":"mail_dialog_send_button","value":"Отправить"};
+{"key":"mail_dialog_cancel_button","value":"Отмена"};
+{"key":"mail_dialog_email_placeholder","value":"Введите адрес электронной почты для ответа..."};
+{"key":"mail_dialog_message_placeholder","value":"Введите ваше сообщение..."};
+{"key":"match3_result_earned_label","value":""};
+{"key":"building_upgrades_label","value":"Улучшения постройки"};
+{"key":"building_upgrade_name_profit_multiplier","value":"Multi Profit"};
+{"key":"building_upgrade_name_timer_reducer","value":"Multi Timer"};
+{"key":"match3_view_adv_play","value":"Играть"};
+{"key":"match3_win_play_again","value":"Изучать далее"};
+{"key":"match3_lose_play_again","value":"Играть ещё раз"};
+{"key":"match3_win_get_term","value":"Активировать"};
+{"key":"match3_play_for_adv_term","value":"Играть ещё раз"};
+{"key":"push_notification_title","value":"Костёр почти погас!"};
+{"key":"push_notification_message","value":"Мне очень нужна ваша помощь :)"};
+{"key":"training_dialogues_buildinghelp_tittle","value":"Наша основная цель"};
+{"key":"training_dialogues_buildinghelp_message","value":"Кудрявый Генри должен добиться для своего\nнарода энергетического благосостояния!\n\nДля этого нам нужно максимально развить\nпостройки - решить все головоломки и\nосуществить все модернизации.\n\nЭто потребует очень много времени и сил,\nно позволит нам перейти к следующей эпохе\nэнергетического развития цивилизации!"};
+{"key":"training_dialogues_buildinghelp_confirm","value":"Всё понятно!"};
+{"key":"training_dialogues_missioncomplete_tittle","value":"Наша цель достигнута"};
+{"key":"training_dialogues_missioncomplete_message","value":"Мы добились энергетического благосостояния!\nТеперь моему народу хватает энергии на всё,\nи мы можем жить без забот и хлопот!\n\nМы прошли очень длинный и сложный путь,\nлегенды о мудром Генри теперь будут\nпередаваться потомками из поколения в\nпоколение, сквозь эпохи!\n\nПоэтому вы ещё ни раз обо мне вспомните"};
+{"key":"training_dialogues_missioncomplete_confirm","value":"Победа!"};
+{"key":"get_term","value":"Получить"};
+{"key":"cooming_soon","value":"Эпоха II  в разработке..."};
+{"key":"will_wait","value":"Буду ждать!"};
+{"key":"activate_term","value":"Активировать"};
+{"key":"bonus_time_wrap_name","value":"Time Wrap"};
+{"key":"bonus_time_wrap_description","value":"получите энергию накопленную за несколько минут"};
+{"key":"bonus_power_profit_name","value":"Power Profit"};
+{"key":"bonus_power_profit_description","value":"все постройки будут приносить больше энергии в течении 1 минуты"};
+{"key":"bonus_strong_fire_name","value":"Strong Fire"};
+{"key":"bonus_strong_fire_description","value":"огонь будет приносить больше энергии в течении 2 минут"};
+{"key":"bonus_super_profit_name","value":"Super Profit"};
+{"key":"bonus_super_profit_description","value":"5 порталов собранных подряд заряжают все объекты на 30 секунд"};
+{"key":"tips_3","value":"Нажатие по костру помогает увеличить запасы энергии"};
+{"key":"tips_4","value":"Порталы приносят сильную энергетическую помощь"};
+{"key":"tips_5","value":"Комбинации Match 3 дают больше очков"};
+{"key":"match3_exit_caption","value":"К поселению"};
+{"key":"loading_match3_caption","value":"загружаем головоломку..."};
+{"key":"loading_maingame_caption","value":"Возвращаемся к поселению..."};
+{"key":"progress_improvements_caption","value":"прогресс изучения"};
+{"key":"add_5_more_moves","value":"Добавить ещё 5 ходов"};
+{"key":"welcome_back_tittle","value":"С возвращением!"};
+{"key":"welcome_back_message","value":"пока вас не было, накопилось энергия:"};
+{"key":"easter_egg_collection","value":"Коллекция пасхальных яиц"};
+{"key":"add_5_more_moves_button","value":"Продолжить"};
+{"key":"agreement_yes","value":"Согласен"};
+{"key":"agreement_no","value":"Не согласен"};
+{"key":"agreement_text","value":"Ознакомьтесь с правилами использования и политикой конфиденциальности. Перед продолжением, необходимо подтвердить, что вы согласны с данными документами"};
+{"key":"loading_check_updates_state","value":"Проверка обновлений..."};
+{"key":"update_help_label","value":"Помощь в обновлении"};
+{"key":"update_download_button","value":"Скачать"};
+{"key":"update_title","value":"Мы подготовили новые улучшения!"};
+{"key":"update_text","value":"Что бы продолжить играть в Type, пожалуйста, обновите игру\nдо новой версии.\nСпасибо !"};
+{"key":"update_help_url","value":"https://krugames.ru"};
+{"key":"statistic_window_current_energy_prefix","value":"доступно энергии: "};
+{"key":"statistic_window_energy_profit_prefix","value":"уровень добычи: "};
+{"key":"statistic_window_energy_profit_persecond","value":" / секунду"};
+{"key":"statistic_window_total_energy","value":"всего добыто: "};
+{"key":"statistic_window_era_name","value":"первобытная эпоха"};
+{"key":"statistic_window_progress","value":"прогресс"};
+{"key":"statistic_window_upgrades","value":"чертежи"};
+{"key":"statistic_window_buildings","value":"постройки"};
+{"key":"statistic_window_fire_taps","value":"тапы огня"};
+{"key":"statistic_window_portals","value":"порталы"};
+{"key":"rateus_title","value":"Нравится игра?"};
+{"key":"rateus_message","value":"Поставьте нам 5 звезд!"};
+{"key":"rateus_rate_button","value":"Оценить"};
+{"key":"rateus_later_button","value":"Позже"};
+{"key":"upgrades_unlock_hint","value":"Изучите чертежи, чтобы улучшить постройку"}
